--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.12.7",
     "@types/typescript": "^2.0.0",
@@ -22,6 +24,7 @@
     "express": "^4.19.2",
     "express-validator": "^7.0.1",
     "joi": "^17.12.3",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.2"
   }
 }
