add imageName and link to event model, review event unique title and error management, add setting project

--- a/.env
+++ b/.env
@@ -11,3 +11,8 @@ PASSWORD_KEY = "e6m6QSv60744unUm9Jx4cCt86qoF8JQHO2Bz6KBC9Ba8BTi397kEa2Am6"
 
 #Server
 LISTEN_PORT = "8080"
+
+
+#Image
+IMAGE_FOLDER_PATH = "./images/"
+IMAGE_DEFAULT_NAME = "default.png"
