--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.12.7",
     "@types/typescript": "^2.0.0",
+    "express-swagger-generator": "^1.1.17",
     "typescript": "^5.4.5"
   },
   "dependencies": {
@@ -29,6 +30,9 @@
     "joi": "^17.12.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.2",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "swagger-autogen": "^2.23.7",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   }
 }
